--- a/style.css
+++ b/style.css
@@ -12,19 +12,21 @@ h1,h2,p,text,a {
 
     header{
     width: 100%;
-    height: 15vh;
+    height: 10vh;
     background-color: #f83805;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     }
 
 .titulo{
-    padding-top: 5vh;
     background-image: url(./img//logo\ panchis.png);
     background-size: cover;
     background-position: center;
     height: 100%;
-    width: 20%;
+    width: 10%;
     display: flex;
     margin-left: 2rem;
 }
@@ -41,7 +43,7 @@ ul{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 2rem;
+    padding-top: .5rem;
 }
 
 li{
@@ -51,8 +53,12 @@ li{
 }
 a{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 1.5rem;
+}
+a:hover{
+    color: #E0CA3C;
+    transition: all 0.3s ease-in-out;
 }
 .img{
     width: 100%;
@@ -96,7 +102,7 @@ a{
     height: 85vh;
      background-color: rgba(0, 0, 0, 0.773); /* película negra transparente */
     z-index: 0;
-    margin-top: 15vh;
+    margin-top: 10vh;
 }
 h2{
     text-align: center;
