--- a/style.css
+++ b/style.css
@@ -159,9 +159,13 @@ footer p {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    background-color: #FAF3E0;
 }
-
+.menuu{
+    background:url(https://images.unsplash.com/photo-1495195129352-aeb325a55b65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1776&q=80);
+  background-size:cover;
+  background-position:right;
+  background-attachment:fixed;
+}
 .tarjeta{
     width: 23%;
     height: fit-content;
