--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a:hover{
 .img{
     width: 100%;
     height: 85vh;
-    background-image: url("https://asset.cloudinary.com/dwrupo75d/39493b154eadc4c30a907702185a9146");
+    background-image:url("./img/481998915_1197675082360421_3217062390045456536_n.jpg");
     display: flex;
     flex-direction: column;
     justify-content: center;
