--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ main{
 footer {
     width: 100%;
     height: 45vh;
-    background-color: #A6281F;
+    background-color: #8e6e41;
     display: flex;
     flex-direction: column;
     align-items: center;
